--- a/authentication/templates/authentication/signup.html
+++ b/authentication/templates/authentication/signup.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>Inscrivez-vous</h2>
+
+    <h2>Create a user</h2>
     {% if form.errors %}
         {{ form.errors }}
     {% endif %}
+        <div class="update-form">
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit" >S’inscrire</button>
+        <button class="update-button" type="submit" >S’inscrire</button>
     </form>
+        </div>
 {% endblock content %}
