--- a/epic_event/templates/event/event_create.html
+++ b/epic_event/templates/event/event_create.html
@@ -4,9 +4,11 @@
 {% block content %}
 
 <h1>Create a new event</h1>
+    <div class="update-form">
     <form action="{% url 'event_create' contract.id %}" method="POST">
     {% csrf_token %}
     {% render_form serializer %}
-    <input type="submit" name="create" value="Save">
+    <input class="update-button" type="submit" name="create" value="Save">
 </form>
+    </div>
 {% endblock content %}
