--- a/static/app.css
+++ b/static/app.css
@@ -469,32 +469,39 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-.btn-group .btn-group-justified button{
-  background-color: #ffffff; /* Green background */
+/*.btn-group .btn-group-justified button{*/
+/*  background-color: #dadada; !* Green background *!*/
+/*  border: 2px solid #01094d; !* Green border *!*/
+/*  color: white; !* White text *!*/
+/*  padding: 10px 24px; !* Some padding *!*/
+/*  cursor: pointer; !* Pointer/hand icon *!*/
+/*    float: left;*/
+/*}*/
+
+.btn-group-justified {
+    width: 100%;
+        /*float: left;*/
+}
+
+.btn-group-justified button {
+  background-color: #dadada; /* Green background */
   border: 2px solid #01094d; /* Green border */
-  color: white; /* White text */
+    border-bottom: 1px solid #01094d;
+  color: black; /* White text */
   padding: 10px 24px; /* Some padding */
   cursor: pointer; /* Pointer/hand icon */
     float: left;
+    border-radius: 5px;
 }
 
-.btn-group button {
-  background-color: #ffffff; /* Green background */
-  border: 2px solid #01094d; /* Green border */
-  color: white; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
-    float: left;
-}
-
-.btn .btn-primary {
-  background-color: #ffffff; /* Green background */
-  border: 2px solid #01094d; /* Green border */
-  color: white; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
-  float: left; /* Float the buttons side by side */
-}
+/*.btn .btn-primary {*/
+/*  background-color: #ffffff; !* Green background *!*/
+/*  border: 2px solid #01094d; !* Green border *!*/
+/*  color: white; !* White text *!*/
+/*  padding: 10px 24px; !* Some padding *!*/
+/*  cursor: pointer; !* Pointer/hand icon *!*/
+/*  float: left; !* Float the buttons side by side *!*/
+/*}*/
 
 
 .btn-group button:not(:last-child) {
@@ -510,7 +517,8 @@ input:checked + .slider:before {
 
 /* Add a background color on hover */
 .btn-group button:hover {
-  background-color: #3e8e41;
+  background-color: #5d5d5d;
+    color: white;
 }
 
 .toggle-btn{
@@ -570,6 +578,7 @@ input:checked + .slider:before {
 .right-side {
     position: relative;
     float: left;
+    width: 40%;
 }
 
 /*.edit-button .edit-button {*/
