--- a/epic_event/templates/event/event_detail.html
+++ b/epic_event/templates/event/event_detail.html
@@ -33,6 +33,13 @@
     {% endif %}
     </div>
 {% endblock content %}
+
 {% block right-side %}
+    <h2>Contract associated</h2>
+    <div>
+        {% include 'contract/contract_snippet.html' with contract=event.contract_id %}
+</div>
+
+    <h2>Issues</h2>
 
 {% endblock right-side %}
