--- a/epic_event/templates/contract/contract_create.html
+++ b/epic_event/templates/contract/contract_create.html
@@ -12,3 +12,7 @@
     </form>
 </div>
 {% endblock content %}
+{% block right-side %}
+    <h2>Customer associated</h2>
+        {% include 'customer/customer_snippet.html' with customer=customer %}
+{% endblock right-side %}
