--- a/epic_event/templates/contract/contract_read_only.html
+++ b/epic_event/templates/contract/contract_read_only.html
@@ -2,7 +2,7 @@
 {% load rest_framework %}
 {% load static %}
 {% block content %}
-
+{% load review_extras %}
 <h1>Contract - {{ contract }}</h1>
 
 {%  if request.user.team != "support" %}
@@ -70,15 +70,22 @@
 
 {%  endblock content %}
 {% block right-side %}
-
+    <h2>Events associated</h2>
     <div>
         {% if contract.event_associated == "uncomplete" %}
             <a href="{% url 'event_create' contract.id %}"><button>Add an event</button></a>
         {% else %}
-            <h2>Event associated</h2>
+
         {% include 'event/event_snippet.html' with event=event %}
     {% endif %}
 </div>
+
+    <h2>Issues</h2>
+    {% for issue in contract|table_contract_detail%}
+            <tr>
+            {{ issue }}
+                </tr>
+    {% endfor %}
 
 
 {% endblock right-side %}
