--- a/epic_event/templates/customer/customer_detail.html
+++ b/epic_event/templates/customer/customer_detail.html
@@ -32,9 +32,17 @@
 {% endblock content %}
 
 {% block right-side %}
+    <h2>Contracts associated</h2>
     <div class=customer-buttons>
+    {% if customer.status != "blacklisted" %}
         <a href="{% url 'contract_create' customer.id %}"><button><img src="{% static 'images/add_contract.png'%}">Add a contract</button></a>
-        <a href="{% url 'contract_list' %}"><button><img src="{% static 'images/contrat_list.png'%}">Ongoing contracts</button></a>
+    {% endif %}
+    {% if customer.status != "prospect"%}
+        <a href="{% url 'contract_list' %}"><button><img src="{% static 'images/contrat_list.png'%}">Contracts associated</button></a>
         <a href="{% url 'customer_event_list' customer.id %}"><button><img src="{% static 'images/event/event_bg_small.png'%}">Events associated</button></a>
+    {% endif %}
+    <h2>Issues</h2>
+
+
     </div>
 {% endblock right-side %}
