--- a/epic_event/templates/contract/contract_snippet.html
+++ b/epic_event/templates/contract/contract_snippet.html
@@ -44,7 +44,7 @@
             </tr>
             <tr>
                 <td class="td-infos">status :</td>
-                <td>{{ contract.status }} contract = {{ contract.id }}</td>
+                <td>{{ contract.status }}</td>
             </tr>
         </tbody>
 </table>
